# AERON

./: README.md  esp32_server.ino  package-lock.json  postcss.config.js
ROS/: aeron.launch.py  joystick.py  k.config  lauch.sim  model.sdf  package.xml  processor.py  robotcontroller.py  setup.cfg  setup.py  speechprocessor.py  test_pep.py  transformer.py  tst_copy.py
src/: app.py  index.html  processingsteps.tsx  tailwind.config.js
src/components/: audioplayer.tsx  errormessage.tsx  messagebubble.tsx  preprocessingsteps.tsx  recordingbutton.tsx
src/hooks/: useaudiorecorder.tsx  usevoiceassistant.tsx
src/tables/: app.tsx
